      crashing or mis-answering these requests.
    - Stop being so aggressive about fetching v2 dir info if your
      DirPort is on but your ORPort is off.
    - Relays were publishing their server descriptor to v1 and v2
      directory authorities, but they didn't try publishing to v3-only
      authorities. Fix this; and also stop publishing to v1 authorities.

  o Major features:
    - Bridges now behave like clients with respect to time intervals for
      downloading new consensus documents. Bridge users now wait until
      the end of the interval, so their bridge will be sure to have a
      new consensus document.
    - Three new config options (AlternateDirAuthority,
      AlternateBridgeAuthority, and AlternateHSAuthority) that let the
      user selectively replace the default directory authorities, rather
      than the all-or-nothing replacement that DirServer offers.
    - Tor can now be configured to read a GeoIP file from disk in one of two
      formats.  This can be used by controllers to map IPs to countries.
      Eventually, it may support exit-by-country.
    - When possible, bridges remember which countries users are coming
      from, and report aggregate information in their extra-info
      documents, so that the bridge authorities can learn where Tor is
      blocked.

  o Minor bugfixes:
    - The fix in 0.2.0.12-alpha cleared the "hsdir" flag in v3 network
      consensus documents when there are too many relays at a single
      IP address. Now clear it in v2 network status documents too, and
      also clear it in routerinfo_t when the relay is no longer listed
      in the relevant networkstatus document.
    - Don't crash if we get an unexpected value for the
      PublishServerDescriptor config option. Reported by Matt Edman;
      bugfix on 0.2.0.9-alpha.
    - Our new v2 hidden service descriptor format allows descriptors
      that have no introduction points. But Tor crashed when we tried